feat: #34: Create a QueryDashboard DTO for a user's private dashboards. Extended User DTO.